# avatar

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
apps/stage-web/: .env.example  vite.config.ts
apps/stage-web/src/: App.vue
apps/stage-web/src/pages/: index.vue
nix/: pnpm-deps-hash.txt
scripts/: portkey-tts.mjs
services/kokoro-tts/: pyproject.toml  server.py
